<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"/>
    </group>
    <item android:title="@string/nav_acc">
        <menu>
            <item android:id="@+id/nav_profile"
                android:title="@string/nav_profile"
                android:icon="@drawable/ic_my_profile"/>
            <item android:id="@+id/nav_change"
                android:title="@string/nav_change"
                android:icon="@drawable/ic_change_password"/>
            <item android:id="@+id/log_out"
                android:title="@string/log_out"
                android:icon="@drawable/ic_log_out"/>
        </menu>
    </item>

</menu>